[FELIX-3386] File install tests use deprecated EasyMock API
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1301199 13f79535-47bb-0310-9956-ffa450edef68